# qalcore

./: .bumpversion.cfg  CITATION.cff  CONTRIBUTING.md  NOTICE  README.dev.md  README.md  next_steps.md  project_setup.md  pyproject.toml  setup.cfg  sonar-project.properties
.githooks/: pre-commit
.github/next_steps/: 01_sonarcloud_integration.md  02_citation.md  03_readthedocs.md  04_zenodo_integration.md  05_linting.md
.github/workflows/: build.yml
docs/: Makefile  conf.py  index.rst  make.bat
example/dwave/qubols/: qubols.ipynb
example/pennylane/: reupload.ipynb  train_features.npy  train_labels.npy  valid_features.npy
example/qiskit/: Untitled.ipynb  vqls.ipynb  vqls.py
example/qiskit/vqees/: vqap.ipynb  vqees.ipynb
example/qiskit/vqls/: destructive_swap_test.ipynb  overlap_test.ipynb  qubit_ordering.ipynb  run_runtime_program.py  trash.ipynb  vqls.ipynb  vqls.py  vqls_poisson.ipynb  vqls_runtime.ipynb  vqls_runtime.py
example/qubols/: qubols.ipynb
example/vqls/: vqls.py  vqls_poisson.ipynb  vqls_runtime.py
qalcore/: __init__.py  my_module.py
qalcore/dwave/qubols/: __init__.py  embedded_qubols.py  encodings.py  qubols.py  solution_vector.py
qalcore/pennylane/: data.py  reupload.py
qalcore/qiskit/utils/: circ_utils.py
qalcore/qiskit/utils/circuit/: hadammard_test.py  special_hadammard_test.py
qalcore/qiskit/vqfd/: mynewqa.py  numpy_fd_solver.py  original_code.py  trash.py  utils.py  variational_fd_solver.py  vqap.py  vqees.py
qalcore/qiskit/vqls/: __init__.py  hadamard_test.py  matrix_decomposition.py  numpy_unitary_matrices.py  overlap_hadamard_test.py  variational_linear_solver.py  vqls.py  vqls_qiskit_dev.ipynb
qalcore/qiskit/vqls/runtime/: runtime_wrapper.py  upload_runtime_program.py  vqls_runtime_program.py
qalcore/qubols/: __init__.py
qalcore/utils/: unitary_decomposition.py
tests/: test_my_module.py
tests/qiskit/vqls/: test_decomposition.py  test_vqls.py
